# sophia-ai-intel

./: .bandit  .dockerignore  .env.example  .env.production  .env.production.secure  .env.production.template  .flake8  .gitignore  AGNO_INTEGRATION_PLAN.md  AGNO_INTEGRATION_PLAN_V2.md  CLEANUP_REMEDIATION_PLAN.md  CLINE_MCP_SETUP_INSTRUCTIONS.md  CODEOWNERS  CODESPACES_SECRET_REFRESH.md  DASHBOARD_COMPLETE_OVERHAUL.md  DASHBOARD_UPGRADE_PLAN.md  DEEP_RESEARCH_PROMPT.md  DEPLOYMENT_BASELINE_ASSESSMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_PLAN_COMPLETE.md  DEPLOYMENT_READINESS_REPORT_20250827_133501.json  DEPLOYMENT_REMEDIATION_SUMMARY_20250827_133501.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_GUIDE.md  DEPLOYMENT_TRANSFORMATION_SESSION_ANALYSIS.md  DEPLOY_NOW  DEPLOY_RENDER  DOCUMENTATION_AUDIT_REPORT.md  DOMAIN_DEPLOYMENT_README.md  DUPLICATE_HANDLING_PLAN.md  Dockerfile  Dockerfile.multi  Dockerfile.universal  EXECUTION_SUMMARY.json  FINAL_DEPLOYMENT_VALIDATION_REPORT.md  FULL_DEPLOYMENT_STATUS.md  HANDOVER_PACKAGE.md  INFRASTRUCTURE_INITIALIZATION_STATUS.md  INTEGRATION_TESTING_AUDIT_REPORT.md  (+165 more)
.github/: CODEOWNERS  dependabot.yml
.infra/: secrets_map.json
agentic/: Dockerfile  __init__.py  api.py  demo.py  health_check.py  pyproject.toml
agentic/business_swarms/: market_swarm.py  schemas.py
agentic/coding_swarms/: dev_swarm.py  main.py  schemas.py
agentic/core/: __init__.py  base_agent.py  config.py  utils.py
agentic/process_orchestration/: main.py  schemas.py
agentic/research_swarms/: __init__.py  schemas.py  trend_swarm.py.deprecated
agentic/swarms/research/: deep_research_swarm.py
agentic/ui/: index.html
archive_scan_results/: archive_report_20250829_085059.txt  archive_scan_20250829_085059.json  cleanup_archived_20250829_085059.sh
audit_results/: repo_state.json  tech_debt.json
config/: router_policy.json  services.json
context/: .env.example  README.md  docker-compose.yml
dockerfiles/: Dockerfile.python-ml  python-base.Dockerfile
docs/: AGENT_SWARM_INTEGRATION_COMPLETE.md  AUDIT_PLAN.md  AUTOMATED_MIGRATION_IMPROVEMENTS.md  BUSINESS_MCP.md  CIRCULAR_DEPENDENCY_RESOLUTION.md  CLOUD_CONTROL_USAGE.md  CODEBASE_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLISTS.md  DEPLOYMENT_PHASE1_REPORT.md  DEPLOYMENT_PREFLIGHT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STRATEGY.md  DEPLOY_FIX_SUMMARY_1_9_4.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY.md  DISASTER_RECOVERY_GUIDE.md  DOCUMENTATION_AUDIT_PROMPT.md  EVAL_CANARY_ROLLBACK_ARCHITECTURE.md  FLY_AUTH_RESOLUTION_PLAN.md  FLY_TOKEN_ACTION_REQUIRED.md  INFRA_OPERATIONS.md  INGRESS_ROUTING_GUIDE.md  KNOWLEDGE_SYNC.md  MEMORY_ARCHITECTURE.md  MONITORING_CONFIGURATION_GUIDE.md  NEON_AUTHENTICATION_FIX.md  NEON_PASSWORDLESS_CONNECTION_GUIDE.md  OPERATIONAL_RUNBOOK.md  PERSONA_V1.md  PHASE1_COMPLETE.md  PHASE1_FINALIZATION_STATUS.md  PHASE1_FINAL_COMPLETION.md  PHASE1_FINAL_STATUS_REPORT.md  PHASE1_FINAL_VERIFICATION.md  PHASE1_QC_COMPLETION.md  PHASE1_QC_VERIFICATION.md  PHASE1_VERIFICATION.md  PHASE2_ROADMAP.md  PHASE_1_7_SUMMARY.md  (+30 more)
jobs/: .dockerignore  Dockerfile  fly.toml  reindex.py  requirements.txt
k8s-deploy/: DEPLOYMENT_GUIDE.md  README.md  deploy.sh
libs/: connections.py  openrouter.py  sophia_core.py
monitoring/: README.md  alerts.yml  loki-config.yml  prometheus.yml  promtail-config.yml  sonic-ai-alerts.yml  sonic-ai-prometheus.yml
nginx/: proxy_params.conf
operations/: troubleshooting.md
ops/: docker-compose.yaml
proofs/: LAMBDA_LABS_SYSTEM_BASELINE_20250826.md  REPOSITORY_AUDIT_REPORT_20250826.md  STABILITY_CHECKPOINT_20250826.md  api_key_hell_solution.txt  audit_full_nuke.txt  audit_phase.txt  audit_round2.txt  audit_round3.txt  env_audit.json  phase1.5_completion.json  phase1.6_completion.json  phase15_complete.json  phase15_knowledge_stack.json  phase15_retrieval.txt  phase1_complete.txt  phase1_final_audit.txt  phase1_nuke_v2_success.txt  phase2_final.txt  phase3_audit_summary.txt  phase3_blast.txt  phase3_deploy_complete.txt  phase3_gaps_v6.txt  phase3_key_nuke.txt  phase3_nuke_v6.txt  phase4_progress_summary.txt  phase_bc_completion_proof.json  sophia_readiness_summary.json  tree.txt  tree_nuke.txt  tree_round2.txt  tree_round3.txt  tree_v6.txt
scripts/: add_github_secrets.sh  agent_infrastructure.py  archive_scan.py  auto_deploy.py  auto_recovery.sh  automated_migration_setup.py  build-all-consolidated.sh  build-consolidated.sh  check-deployment-status.sh  comprehensive-404-fix.sh  comprehensive_audit.py  configure_dns_token.sh  create_biz_tables.sql  data_ingestion_pipeline.py  debug-profiler.sh  demo_mcp_tokens.py  deploy-arm64-sophia.sh  deploy-complete-application.sh  deploy-consolidated.sh  deploy-domain.sh  deploy-frontend-recovery.sh  deploy-infrastructure-only.sh  deploy-minimal.sh  deploy-production-complete.sh  deploy-production-ingress.sh  deploy-production-secure.sh  deploy-sonic-ai.sh  deploy-sophia.sh  deploy-to-lambda-labs.sh  deploy-to-production.sh  deploy_now.sh  deploy_unified_sophia.sh  dev-utils.sh  dev-workflow.sh  direct_render_deployment.py  dns_management.py  env-production-validation.sh  env-template  env_check.py  env_validation.py  (+111 more)
services/: Dockerfile.unified-swarm  agno_orchestrator.py  (+32 more)
services/agentic/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/agentic/src/: main.py
services/agno-teams/: Dockerfile  README.md  app.py  health_check.py  pyproject.toml  requirements.txt
services/agno-teams/sophia_agno_teams.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/agno-teams/src/: main.py
services/agno-teams/src/app/: app.py
services/agno-teams/src/business/client_health/: __init__.py  client_health_team.py
services/agno-teams/src/business/client_health/agents/: client_success_manager.py  support_ticket_analyst.py  usage_analyst.py
services/agno-teams/src/business/sales_intelligence/: __init__.py  sales_intelligence_team.py
services/agno-teams/src/business/sales_intelligence/agents/: competitor_analyst.py  deal_scorer.py  pipeline_analyst.py  revenue_forecaster.py  sales_coach.py
(+1255 files in other folders)
