[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophia-agentic-service"
version = "0.1.0"
description = "Unified service for Agno AI agents and swarms in the Sophia AI ecosystem."
authors = [
    {name = "Sophia AI Intelligence Team", email = "ai@sophia-intel.ai"}
]
dependencies = [
    "agno>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "openai>=1.12.0",
    "anthropic>=0.21.3",
    "psycopg[binary]>=3.1.18",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.7.3"
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.9.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["find:"],

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"